--- a/_data/funfacts.yml
+++ b/_data/funfacts.yml
@@ -1,12 +1,12 @@
-- counter: 20000
+- counter: 20001
   icon: ion-ios-chatboxes-outline
-  text: Cups of Coffee
+  text: Cups of coffee every day
 - counter: 1500
   icon: ion-ios-glasses-outline
-  text: Gallons of Soft Drink
+  text: Gallons of water a week
 - counter: 1200
   icon: ion-ios-compose-outline
-  text: Whiteboard Markers
+  text: To-do lists hourly
 - counter: 300
   icon: ion-ios-timer-outline
-  text: Websites built
+  text: Pushups continuous
