--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ keep_files:
 # Site settings
 title: Erin Menefee
 subtitle: ""
-url: "http://ndrewtl.github.io" # the base hostname & protocol for your site
+url: "http://jacobwood27.github.io" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
 baseurl: "/airspace-jekyll"
 cover: "/assets/cover.png"
